# Swirl-String-Theory

./: .gitignore  CITATION.cff  Coverletter_Hydrogen_Ground-State_Hyperfine_Splitting.tex  EM.tex  EM_G.tex  FILE_MOVEMENT_LOG.md  Gemini-_07.md  Geometric Limit of the Swirl-String Mass Functional.tex  Hydrogen_Ground-State_Hyperfine_Splitting.tex  README.md  S40_winding_factors.csv  SST alle delen geevalueerd.md  SST-00-90-High-resolution-summaries-with-formula-classification (3).md  SST-00-90-High-resolution-summaries-with-formula-classification.json  SST-00-90-High-resolution-summaries-with-formula-classification.md  SST-00-90-High-resolution-summaries-with-formula-classification.txt  SST-72_Delay-Selected Swirl Modes, Two-Mode Correlations, and the Clock--Loop Sector of Swirl--String Theory.tex  SST-73_A_Poisson-Type_Gravity_Program_from_Organized_Swirl_Transport.tex  SST-74 Defect Bound Chirality Probes And Near Zero Modes.tex  SST-75_Phase_two.tex  SST-77_Entanglement_as_Shared-Circulation_Phase_Locking.tex  SST-77_delay_phase_toy_model.py  SST_evaluation_table_original.csv  SST_v2_matrix_all_papers_prefilled.csv  SST_v2_matrix_all_papers_skeleton.csv  SST_v2_matrix_applied_top_papers.csv  SSTcore.tex  SSTcore_full_probe.py  SSTcore_v0_8_2_Colab_Geometry_Probe_v0_2_prime_knots.xlsx  Swirl-String-Theory.code-workspace  Thermodynamic_interpertation.tex  TwistKnots.tex  Vortex_thought_experiments.tex  Vortex_thought_experiments_nl.tex  Vortex_thought_experiments_nl_v5_2.tex  Vortex_thought_experiments_v5_2.tex  combined_transcriptions.tex  dslit.tex  ericdollard.tex  (+22 more)
(+8374 files in other folders)
