[build-system]
requires = ["setuptools>=61", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "sst71-benchmark"
version = "0.1.0"
description = "SST-71 helicity asymmetry benchmark (optional C++ kernel)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "mpmath",
    "matplotlib",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = []
# No Python packages to install; only the extension. setup.py defines ext_modules.
